20th June 2000: wxWindows 2.2 released

Minor bug-fixes.

4th June 2000: wxWindows pre-2.2 release

Complete freeze now. Only vital bug-fixes allowed.

Various enhancements to wxSizer.

Added wxGridSizer and wxFlexGridSizer.

Reworked wxURL.

MANY bugfixes.

22th March 2000: wxWindows 2.1.15 released

Build fix. RPMs no loner require GTK's include files.

An extra library for the OpenGl class now gets builts
19th March 2000: wxWindows 2.1.14 released

An extra library for the OpenGl class now gets builts
and installed. There is also an extra RPM for this 
small class now.

Added possibility to compile wxGTK with already installed
image libraries (TIFF, JPEG, PNG, ZLIB) if you really
know what you are doing.

Added support for pipes and a stream class to get data
out of them.

Added memory file system (so you can save html pages with
images in memory).

Added wxDragImage class for dragging easily images.

The DEB and RPM packages now conform better to various
standards.

Renamed wx-config to wxgtk-config so that motif can be co-installed
on the same machine (with wxmotif-config).

Speed up for drawing by resuing once created DCs instead of
creating and destroying them all the time.

Corrections to clipping region code (among others related to
simultaneous bitmap clipping).

A few more improvements to tab traversal.

A number of changes to socket code.

Added code for rotating images.

Much work on the new grid class has been done. Very cool now.

wxPlotWindow is now useful and works. Added on-off lines useful for
displaying trigger signals.

Corrected one more bug in the TIFF handler.

It is now possible to run wxGTK apps in the best visual
instead of only the default on system that support this
(typically IRIX).

Added default keyboard handling to wxScrolledWindow.

Fixed slightly overoptimized window colour and style handling.
This will expose a bug in the GtkPixmap theme, or more exactly
in ImLib's image cashing so that wxGTK currently doesn't work