@@ -33,6 +33,7 @@ public:
     void DoStreamDemo2(wxCommandEvent& event);
     void DoStreamDemo3(wxCommandEvent& event);
     void DoStreamDemo4(wxCommandEvent& event);
+    void DoStreamDemo5(wxCommandEvent& event);
 #if wxUSE_UNICODE
     void DoUnicodeDemo(wxCommandEvent& event);
 #endif
@@ -80,6 +81,7 @@ enum
     TYPES_STREAM2,
     TYPES_STREAM3,
     TYPES_STREAM4,
+    TYPES_STREAM5,
     TYPES_MIME
 };
 
